# mumbleice

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.yml  Dockerfile  README.md  mumbleice.conf.example  mumbleice.yml.example  requirements.txt  setup.cfg  setup.py
.github/: renovate.json  semantic.yml
.github/workflows/: actions.yml  dev-release.yml  github-ci.yml  lint.yml  release.yml  test.yml
docker/: entrypoint.sh  mumbleice.yml
mumbleice/: __init__.py  __main__.py  bot.py  icecast.py  mumble.py  utils.py  watchdog.py
