[metadata]
name = mumbleice
description = Mumble bot for streaming to Icecast
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.2.0
url = https://github.com/bitcastza/mumbleice
keywords = mumble audio icecast streaming
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Other Audience
    Topic :: Multimedia :: Sound/Audio
    Topic :: Communications
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
install_requires =
    pymumble
    ffmpeg-python
    pydub
    pyaml-env

[options.package_data]
* = LICENCE.md, mumbleice.yml.example, *.wav

[options.entry_points]
console_scripts =
    mumbleice = mumbleice.__main__:run
