[metadata]
description = Mumble bot for streaming to Icecast
long_description = file: README.md
long_description_content_type = text/markdown
# Is replaced by CI on release
version = 0.0.0
url = https://github.com/bitcastza/mumbleice
keywords = mumble audio icecast streaming
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Other Audience
    Topic :: Multimedia :: Sound/Audio
    Topic :: Communications
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
python_requires = >= 3.9
install_requires =
    pymumble
    ffmpeg-python
    pydub
    pyaml-env

[options.package_data]
* = resources/*.wav

[options.entry_points]
console_scripts =
    mumbleice = mumbleice.__main__:run
